# gaml-c

./: .gitattributes  .gitignore  LICENSE.md  README.md
Source/: .clang-format  CMakeLists.txt  PyBuildFile.txt  RegenerateProjectFiles.bat  gaml-c.code-workspace  gaml-c.sln  gaml-c.vcxproj
Source/gaml-c/: CoreMinimal.h  OptionsParser.cpp  OptionsParser.h  main.cpp
Source/gaml-c/Compiler/: Compiler.cpp  Compiler.h  CompilerConfig.cpp  CompilerConfig.h  CompilerFileInfo.cpp  CompilerFileInfo.h  CompilerHelperLibrary.cpp  CompilerHelperLibrary.h  CompilerOptions.cpp  CompilerOptions.h
Source/gaml-c/Core/: CompilerConfig.cpp  CompilerConfig.h  CompilerHelperLibrary.cpp  CompilerHelperLibrary.h  CompilerOptions.h  CoreEnums.h  CoreMinimal.h  CoreObjects.cpp  CoreObjects.h  GamlFileInfo.cpp  GamlFileInfo.h
Source/gaml-c/Generator/: GeneratorBase.cpp  GeneratorBase.h  GeneratorHelperLibrary.cpp  GeneratorHelperLibrary.h  LLVMGenerator.cpp  LLVMGenerator.h  NASMGenerator.cpp  NASMGenerator.h  ReduceCGenerator.cpp  ReduceCGenerator.h
Source/gaml-c/Lexer/: Lexer.cpp  Lexer.h
Source/gaml-c/Linker/: Linker.cpp  Linker.h
Source/gaml-c/Logger/: CompileLogger.cpp  CompileLogger.h  ErrorLogger.cpp  ErrorLogger.h
Source/gaml-c/Parser/: AST.cpp  AST.h  Parser.cpp  Parser.h  ParserHelperLibrary.cpp  ParserHelperLibrary.h  ParserHelperLibray.h  ParserStates.cpp  ParserStates.h  ProgramSymbols.h  ProgramSymbolsInfo.cpp  ProgramSymbolsInfo.h
Source/gaml-c/Platform/: GenericPlatform.h  LinuxPlatform.h  PlatformHelperLibrary.cpp  PlatformHelperLibrary.h  WindowsPlatform.h
(+372 files in other folders)
